<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Nooba</string>
    <string name="description_post_author_avatar">Post author avatar</string>
    <string name="description_post_menu">Post menu</string>
    <string name="description_post_likes">Post likes</string>
    <string name="description_post_shares">Post shares</string>
    <string name="description_post_views">Post views</string>
    <string name="remove">Remove</string>
    <string name="edit">Edit</string>
    <string name="description_send_post">Send post</string>
    <string name="new_post_hint">Type new message here</string>
    <string name="empty_content_error">Content can\'t be empty</string>
    <string name="cancel_edit">Cancel edit</string>
    <string name="action_edit">Edit post</string>
    <string name="action_create">Create Post</string>
    <string name="dud">dud</string>
    <string name="share_post">Share post</string>
    <string name="video_preview">Video preview</string>
    <string name="play">Play</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="alert_load_draft">There\'s seem to be unfinished draft. Would you like to load it?</string>
</resources>