<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/postList"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@id/cancelEditBarrier"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:listitem="@layout/card_post" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/groupEditAction"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="gone"
        app:constraint_referenced_ids="postEditIcon,actionTypeEdit, actionTypeCreate,actionText,buttonCancelEdit, background_hack"
        tools:visibility="visible" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/cancelEditBarrier"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:barrierDirection="top"
        app:constraint_referenced_ids="postEditIcon,actionTypeEdit,buttonCancelEdit" />

    <ImageView
        android:id="@+id/background_hack"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#E1E3E5"
        android:contentDescription="@string/dud"
        app:layout_constraintBottom_toTopOf="@id/newContentBarrier"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/cancelEditBarrier" />

    <ImageView
        android:id="@+id/postEditIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:contentDescription="@string/dud"
        android:padding="@dimen/padding_size_ic24"
        android:src="@drawable/ic_edit_24"
        app:layout_constraintBottom_toTopOf="@id/newContentBarrier"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/actionTypeEdit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/action_edit"
        android:textColor="#616161"
        app:layout_constraintBottom_toTopOf="@id/actionText"
        app:layout_constraintEnd_toStartOf="@id/buttonCancelEdit"
        app:layout_constraintStart_toEndOf="@id/postEditIcon"
        app:layout_constraintTop_toTopOf="@id/cancelEditBarrier"
        tools:text="@string/action_edit" />

    <TextView
        android:id="@+id/actionText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:lines="1"
        android:text=""
        android:textColor="#616161"
        app:layout_constraintBottom_toTopOf="@id/newContentBarrier"
        app:layout_constraintEnd_toStartOf="@id/buttonCancelEdit"
        app:layout_constraintStart_toEndOf="@id/postEditIcon"
        app:layout_constraintTop_toBottomOf="@id/actionTypeEdit"
        tools:text="[текст сообщения]" />

    <TextView
        android:id="@+id/actionTypeCreate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/action_create"
        android:textColor="#616161"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/newContentBarrier"
        app:layout_constraintEnd_toStartOf="@id/buttonCancelEdit"
        app:layout_constraintStart_toEndOf="@id/postEditIcon"
        app:layout_constraintTop_toTopOf="@id/cancelEditBarrier"
        tools:text="@string/action_create" />

    <ImageButton
        android:id="@+id/buttonCancelEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:contentDescription="@string/cancel_edit"
        android:padding="@dimen/padding_size_ic24"
        android:src="@drawable/ic_cancel_24"
        app:layout_constraintBottom_toTopOf="@id/newContentBarrier"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cancelEditBarrier" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/newContentBarrier"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:barrierDirection="top"
        app:constraint_referenced_ids="newContent, buttonSendPost" />

    <EditText
        android:id="@+id/newContent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_size"
        android:background="@android:color/transparent"
        android:hint="@string/new_post_hint"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:maxLines="5"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/buttonSendPost"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/newContentBarrier" />

    <ImageButton
        android:id="@+id/buttonSendPost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:contentDescription="@string/description_send_post"
        android:padding="@dimen/padding_size_ic24"
        android:src="@drawable/ic_send_post_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>